--- a/backend/apps/warehouse/templates/warehouse/income.html
+++ b/backend/apps/warehouse/templates/warehouse/income.html
@@ -1,50 +1,6 @@
+{% extends 'snippets/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static '/assets/css/style.css' %}" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- header starts ==== -->
-    <header>
-      <div class="header-left">
-        <div class="logo">
-          <img src="{% static "/assets/icons/logo.svg" %}" alt="logo" />
-        </div>
-        <div class="header-links">
-          <div class="header-link header-link-active">
-            <a href="">филиалы</a>
-          </div>
-          <div class="header-link">
-            <a href="">Отчёт</a>
-          </div>
-        </div>
-      </div>
-      <div class="header-right">
-        <div class="dropdown">
-          <button
-            class="dropdown-toggle profile-btn"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            {{ user.l_name }} {{ user.f_name }}
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'warehouse:warehouse-login' %}">Выйти</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
+{% block content %}
     <!-- header ends === -->
 
     <!-- navigation starts ====== -->
@@ -181,7 +137,7 @@
             </tr>
           </thead>
           <tbody>
-
+{% for rec in receive_registry %}
             <tr>
               <td style="width: 35px" class="text-center">
                 <img
@@ -193,7 +149,7 @@
               <td class="text-center">
                 <img src="{% static "assets/icons/tick.svg" %}" alt="icon" />
               </td>
-              <td class="text-start">50000341</td>
+              <td class="text-start">{{ rec.id }}</td>
               <td class="text-start">ВНУТРЕНИЙ ПРИХОД</td>
               <td class="text-start">01.02.2023</td>
               <td class="text-start">1</td>
@@ -209,6 +165,7 @@
               <td class="text-start">01.02.2023</td>
               <td class="text-start">HAYAT MEDICAL FILIAL</td>
             </tr>
+{% endfor %}
             <tr>
               <td style="width: 35px" class="text-center">
                 <img
@@ -220,7 +177,7 @@
               <td class="text-center">
                 <img src="{% static "/assets/icons/mail.svg" %}" alt="icon" />
               </td>
-              <td class="text-start">50000341</td>
+              <td class="text-start"></td>
               <td class="text-start">ВНУТРЕНИЙ ПРИХОД</td>
               <td class="text-start">01.02.2023</td>
               <td class="text-start">1</td>
@@ -430,12 +387,5 @@
     </div>
     <!-- office modal ends ========= -->
 
-    <!-- script ============= -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="{% static '/assets/js/script.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}}
+
