--- a/backend/apps/warehouse/templates/warehouse/index.html
+++ b/backend/apps/warehouse/templates/warehouse/index.html
@@ -1,63 +1,16 @@
+{% extends 'snippets/base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static '/assets/css/style.css' %}"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-            crossorigin="anonymous"
-    />
-</head>
-<body>
-<!-- header starts ==== -->
-<header>
-    <div class="header-left">
-        <div class="logo">
-            <img src="{% static '/assets/icons/logo.svg' %}" alt="logo"/>
-        </div>
-        <div class="header-links">
-            <div class="header-link header-link-active">
-                <a href="">филиалы</a>
-            </div>
-            <div class="header-link">
-                <a href="">Отчёт</a>
-            </div>
-        </div>
-    </div>
-    <div class="header-right">
-        <div class="dropdown">
-            <button
-                    class="dropdown-toggle profile-btn"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-            >
-                {{ user.l_name }} {{ user.f_name }}
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'warehouse:warehouse-logout' %}">Выйти</a></li>
-            </ul>
-        </div>
-    </div>
-</header>
-<!-- header ends === -->
-
-<!-- navbar starts ===== -->
+{% block content %}
 <nav>
-    <a href="/medicines.html" class="nav-link">
+    <a href="{% url 'warehouse:warehouse-medicines' %} " class="nav-link">
         <img src="{% static '/assets/icons/briefcase-medical.svg' %}" alt="icon"/>
         <p>
             Реестр <br/>
             лекарств
         </p>
     </a>
-    <a href="/income.html" class="nav-link">
+    <a href="{% url 'warehouse:warehouse-incomes' %} " class="nav-link">
         <img src="{% static '/assets/icons/arrow-down-to-square.svg' %}" alt="icon"/>
         <p>
             Реестр <br/>
@@ -489,14 +442,4 @@
 <!-- Розничная торговля modal ends ========= -->
 <!-- main ends ==== -->
 
-<!-- script bootstrap ==== -->
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"
-></script>
-
-<!-- script js ===== -->
-<script src="{% static '/assets/js/index.js' %}"></script>
-</body>
-</html>
+{% endblock content %}
