--- a/backend/apps/warehouse/templates/cheque/F-kassa-new-checks.html
+++ b/backend/apps/warehouse/templates/cheque/F-kassa-new-checks.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-    <link rel="stylesheet" href="{% static "assets/css/style.css" %}"/>
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}"/>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -19,7 +19,7 @@
     <div class="header-left">
         <div class="logo">
             <a href="">
-                <img src="{% static "assets/icons/logo.svg" %}" alt="logo"/>
+                <img src="{% static 'assets/icons/logo.svg' %}" alt="logo"/>
             </a>
         </div>
         <div class="header-links">
@@ -40,14 +40,14 @@
                         <li class="mb-3 p-0">
                             <a class="dropdown-item text-black fw-normal p-0"
                                href="./F-kassa-new-checks.html">
-                                <img src="{% static "/assets/icons/receipt-alt-1.svg" %}" alt="icon"/>
+                                <img src="{% static '/assets/icons/receipt-alt-1.svg' %}" alt="icon"/>
                                 Новый чек</a>
                         </li>
                         <li class="p-0">
                             <a
                                     class="dropdown-item text-black fw-normal p-0"
                                     href="./F-kassa-all-checks.html"
-                            ><img src="{% static "/assets/icons/receipt-alt-3.svg" %}" alt="icon"/> Все
+                            ><img src="{% static '/assets/icons/receipt-alt-3.svg' %}" alt="icon"/> Все
                                 чеки</a>
                         </li>
                     </ul>
@@ -70,7 +70,7 @@
                                     data-bs-toggle="modal"
                                     class="dropdown-item text-black fw-normal p-0"
                             >
-                                <img src="{% static "/assets/icons/square-user-chart.svg" %}" alt="icon"/>
+                                <img src="{% static '/assets/icons/square-user-chart.svg' %}" alt="icon"/>
                                 Отчёт
                             </button>
                         </li>
@@ -80,7 +80,7 @@
                                     data-bs-toggle="modal"
                                     class="dropdown-item text-black fw-normal p-0"
                             ><img
-                                    src="{% static "assets/icons/door-open.svg" %}"
+                                    src="{% static 'assets/icons/door-open.svg' %}"
                                     alt="icon"
                             />Открыть
                             </button
@@ -90,7 +90,7 @@
                             <button
                                     class="dropdown-item text-black fw-normal p-0"
                             ><img
-                                    src="{% static "assets/icons/door-closed.svg" %}"
+                                    src="{% static 'assets/icons/door-closed.svg' %}"
                                     alt="icon"
                             />Закрыть
                             </button
