--- a/backend/apps/warehouse/templates/warehouse/receive_registry.html
+++ b/backend/apps/warehouse/templates/warehouse/receive_registry.html
@@ -1,5 +1,9 @@
 {% extends 'snippets/base.html' %}
+{% block header_link1_active %}
+    header-link-active
+{% endblock %}
 {% load static %}
+
 {% block content %}
     <!-- header ends === -->
 
