--- a/backend/apps/warehouse/templates/warehouse/receive_registry.html
+++ b/backend/apps/warehouse/templates/warehouse/receive_registry.html
@@ -70,13 +70,9 @@
           <!-- table body starts ========== -->
           <tbody>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
+                <td class="text-center">
+                    <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                </td>
               <td>
                 <input type="checkbox" name="" id="" />
               </td>
@@ -89,214 +85,185 @@
               <td style="text-align: end">02.03.2023 14:00:02</td>
             </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/circle-xmark.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/circle-xmark.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img
-                  class="more-icon"
-                  src="/assets/icons/row-left-mini.svg"
-                  alt=""
-                />
-              </td>
-              <td>
-                <input type="checkbox" name="" id="" />
-              </td>
-              <td>710</td>
-              <td>ПРИХОД НА СКЛАД</td>
-              <td>02.03.2023</td>
-              <td>000 GREAT LUX PHARM</td>
-              <td style="text-align: end">11 157 710,00</td>
-              <td style="text-align: end">АДМИНИСТРАТОР</td>
-              <td style="text-align: end">02.03.2023 14:00:02</td>
-            </tr>
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
+            <tr class="table-body">
+                    <td class="text-center">
+                        <img src="{% static '/assets/icons/mail.svg' %}" alt="icon" />
+                    </td>
+                  <td>
+                    <input type="checkbox" name="" id="" />
+                  </td>
+                  <td>710</td>
+                  <td>ПРИХОД НА СКЛАД</td>
+                  <td>02.03.2023</td>
+                  <td>000 GREAT LUX PHARM</td>
+                  <td style="text-align: end">11 157 710,00</td>
+                  <td style="text-align: end">АДМИНИСТРАТОР</td>
+                  <td style="text-align: end">02.03.2023 14:00:02</td>
+                </tr>
           </tbody>
 
           <!-- table body ends ======= -->
